# hyper-engine

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  imgui.ini
assets/shaders/: color_space.hlsli  globals.hlsli  grid_shader.hlsl  mesh_shader.hlsl  opaque_shader.hlsl  shader_interop.h
cmake/: CompilerWarnings.cmake  Doxygen.cmake  PreventInSourceBuilds.cmake  StandardProjectSettings.cmake  Utils.cmake
hyper_core/: CMakeLists.txt
hyper_core/include/hyper_core/: assertion.hpp  bit_flags.hpp  bitmask.hpp  bits.hpp  default_delete.hpp  filesystem.hpp  forward.hpp  global_environment.hpp  hyper_core.hpp  job_system.hpp  logger.hpp  math.hpp  module.hpp  nonnull_own_ptr.hpp  nonnull_ref_ptr.hpp  own_ptr.hpp  prerequisites.hpp  ref_counted.hpp  ref_ptr.hpp  string.hpp  thread_safe_ring_buffer.hpp  weak_ptr.hpp  weakable.hpp
hyper_core/src/hyper_core/: filesystem.cpp  global_environment.cpp  hyper_core.cpp  job_system.cpp  logger.cpp  ref_counted.cpp  string.cpp
hyper_ecs/: CMakeLists.txt
hyper_ecs/include/hyper_ecs/: hyper_ecs.hpp  model_component.hpp  transform_component.hpp
hyper_ecs/src/hyper_ecs/: hyper_ecs.cpp
hyper_engine/: CMakeLists.txt
hyper_engine/include/hyper_engine/: camera.hpp  editor_engine.hpp  engine.hpp  engine_loop.hpp  game_engine.hpp
hyper_engine/src/: main.cpp
hyper_engine/src/hyper_engine/: camera.cpp  editor_engine.cpp  engine.cpp  engine_loop.cpp  game_engine.cpp
hyper_event/: CMakeLists.txt
hyper_event/include/hyper_event/: event_bus.hpp  event_handler.hpp  event_id_generator.hpp  hyper_event.hpp
hyper_event/src/hyper_event/: event_bus.cpp  hyper_event.cpp
hyper_platform/: CMakeLists.txt
hyper_platform/include/hyper_platform/: forward.hpp  hyper_platform.hpp  input.hpp  key_codes.hpp  key_events.hpp  mouse_codes.hpp  mouse_events.hpp  sdl_event.hpp  window.hpp  window_events.hpp
hyper_platform/src/hyper_platform/: hyper_platform.cpp  input.cpp  key_events.cpp  mouse_events.cpp  sdl_event.cpp  window.cpp  window_events.cpp
hyper_render/: CMakeLists.txt
hyper_render/include/hyper_render/: camera.hpp  forward.hpp  hyper_render.hpp  material.hpp  mesh.hpp  renderable.hpp  renderer.hpp  scene.hpp
hyper_render/include/hyper_render/render_passes/: grid_pass.hpp  imgui_pass.hpp  opaque_pass.hpp
hyper_render/src/hyper_render/: camera.cpp  hyper_render.cpp  material.cpp  mesh.cpp  renderable.cpp  renderer.cpp  scene.cpp
hyper_render/src/hyper_render/render_passes/: grid_pass.cpp  imgui_pass.cpp  opaque_pass.cpp
hyper_render/stash/: mesh.cpp  mesh.hpp  model.cpp  model.hpp
hyper_rhi/: CMakeLists.txt
hyper_rhi/include/hyper_rhi/: buffer.hpp  command_list.hpp  compare_operation.hpp  compute_pass.hpp  compute_pipeline.hpp  descriptor_manager.hpp  dimension.hpp  format.hpp  forward.hpp  graphics_device.hpp  graphics_pipeline.hpp  hyper_rhi.hpp  imgui_manager.hpp  label_color.hpp  pass.hpp  pipeline_layout.hpp  queue.hpp  render_pass.hpp  render_pipeline.hpp  resource.hpp  resource_handle.hpp  sampler.hpp  shader_compiler.hpp  shader_module.hpp  shader_type.hpp  subresource_range.hpp  surface.hpp  texture.hpp  texture_view.hpp
hyper_rhi/include/hyper_rhi/d3d12/: d3d12_common.hpp  d3d12_graphics_device.hpp  d3d12_surface.hpp
hyper_rhi/include/hyper_rhi/vulkan/: vulkan_buffer.hpp  vulkan_command_list.hpp  vulkan_common.hpp  vulkan_compute_pass.hpp  vulkan_compute_pipeline.hpp  vulkan_descriptor_manager.hpp  vulkan_graphics_device.hpp  vulkan_graphics_pipeline.hpp  vulkan_imgui_manager.hpp  vulkan_pipeline_layout.hpp  vulkan_queue.hpp  vulkan_render_pass.hpp  vulkan_render_pipeline.hpp  vulkan_sampler.hpp  vulkan_shader_module.hpp  vulkan_surface.hpp  vulkan_texture.hpp  vulkan_texture_view.hpp  vulkan_upload_manager.hpp
hyper_rhi/src/hyper_rhi/: buffer.cpp  command_list.cpp  compute_pass.cpp  compute_pipeline.cpp  descriptor_manager.cpp  graphics_device.cpp  graphics_pipeline.cpp  hyper_rhi.cpp  pipeline_layout.cpp  queue.cpp  render_pass.cpp  render_pipeline.cpp  resource.cpp  resource_handle.cpp  sampler.cpp  shader_compiler.cpp  shader_module.cpp  surface.cpp  texture.cpp  texture_view.cpp
hyper_rhi/src/hyper_rhi/d3d12/: d3d12_graphics_device.cpp  d3d12_surface.cpp
hyper_rhi/src/hyper_rhi/vulkan/: vulkan_buffer.cpp  vulkan_command_list.cpp  vulkan_compute_pass.cpp  vulkan_compute_pipeline.cpp  vulkan_descriptor_manager.cpp  vulkan_graphics_device.cpp  vulkan_graphics_pipeline.cpp  vulkan_imgui_manager.cpp  vulkan_pipeline_layout.cpp  vulkan_queue.cpp  vulkan_render_pass.cpp  vulkan_render_pipeline.cpp  vulkan_sampler.cpp  vulkan_shader_module.cpp  vulkan_surface.cpp  vulkan_texture.cpp  vulkan_texture_view.cpp  vulkan_upload_manager.cpp
